[package]
name = "factorio-mod-tool"
version = "0.1.1"
edition = "2021"
authors = ["Zynh Ludwig <Zynh0722@gmail.com>", "NullCube"]
description = "A simple tool for collecting and switching currently enabled mods in Factorio"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
dirs = "5.0.1"
